cargo-features = ["edition2024"]

[package]
name = "punlock"
version = "0.1.0"
edition = "2024"

[lib]
name = "punlock"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
cfg-if = "1.0.0"
clap = { version = "4.5.37", features = ["derive"] }
directories = "6.0.0"
futures = "0.3.31"
jmespath = "0.3.0"
lazy_static = "1.5.0"
regex = "1.11.1"
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
users = "0.11.0"
