[package]
name = "punlock"
version = "0.1.0"
edition = "2018"

[lib]
name = "punlock"
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
argon2 = "0.5.3"
async-trait = "0.1.88"
base64 = "0.22.1"
clap = { version = "4.5.37", features = ["derive"] }
dialog = "0.3.0"
directories = "6.0.0"
dirs = "6.0.0"
futures = "0.3.31"
hex = "0.4.3"
hkdf = "0.12.4"
hmac = "0.12.1"
jmespath = "0.3.0"
lazy_static = "1.5.0"
pbkdf2 = "0.12.2"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencode = "1.0.1"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
